# ezrassor_joy_translator

./: package.xml  setup.cfg  setup.py
.github/workflows/: build.yml
config/: nintendo-switch-controller.yaml  ps4-controller.yaml  xbox-360-controller.yaml
docs/: README.md
launch/: joy_translator.py
source/ezrassor_joy_translator/: __init__.py  __main__.py  command.py  config.py
test/integ/ezrassor_joy_translator/: test_joy_translator.py
test/unit/ezrassor_joy_translator/: test_command.py  test_config.py
